整理代码 为异步做准备