@@ -1,6 +1,5 @@
 package com.emmett.auto_check.service.impl;
 
-import cn.hutool.core.util.ObjectUtil;
 import com.emmett.auto_check.config.SYSConfig;
 import com.emmett.auto_check.constants.Api;
 import com.emmett.auto_check.domain.*;
@@ -9,23 +8,15 @@ import com.emmett.auto_check.utils.HttpUtil;
 import com.google.gson.Gson;
 import lombok.extern.slf4j.Slf4j;
 import okhttp3.Response;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static com.emmett.auto_check.constants.Api.*;
 
@@ -39,11 +30,11 @@ import static com.emmett.auto_check.constants.Api.*;
 @Service
 public class AutoCheckService implements IAutoCheckService {
 
-    @Override
-    public void doCheck(String id, String pwd, SYSConfig sysConfig) {
+    private final RequetBody requetBody = new RequetBody();
 
-        RequetBody requetBody = new RequetBody();
-        String efSecurityToken = "";
+    @Override
+    public void doCheck(SYSConfig.User user, SYSConfig sysConfig) {
+
         DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
         // 获取当月第一天
 //        LocalDate firstDayOfMonth = LocalDate.now().withDayOfMonth(1);
@@ -65,7 +56,7 @@ public class AutoCheckService implements IAutoCheckService {
 
         // 登录接口，获取cookie
         try {
-            String loginUrl = String.format(Api.LoginRequestUrl, id, pwd);
+            String loginUrl = String.format(Api.LoginRequestUrl, user.getId(), user.getPassword());
             HashMap<String,String> loginParams = new HashMap<>();
             Response response = HttpUtil.formBodyPost(loginUrl, loginParams);
             response.close();
@@ -75,11 +66,14 @@ public class AutoCheckService implements IAutoCheckService {
         }
 
         // 页面接口，获取token
+        String efSecurityToken;
         try {
             Response response = HttpUtil.jsonGet(QCRT0101RequestUrl);
+            assert response.body() != null;
             String html = response.body().string();
             Document doc = Jsoup.parse(html);
             Element efSecurityTokenElement = doc.getElementById("efSecurityToken");
+            assert efSecurityTokenElement != null;
             efSecurityToken = efSecurityTokenElement.attr("value");
             response.close();
         } catch (Exception e) {
@@ -87,12 +81,11 @@ public class AutoCheckService implements IAutoCheckService {
             throw new RuntimeException(e);
         }
         // 任务查询接口
-        List<List<String>> rows = new ArrayList<>();
+        List<List<String>> rows;
         try {
             QueryTaskReAndResBody queryTaskRequestBody = new Gson().fromJson(requetBody.getQueryTaskRequetBodyString(), QueryTaskReAndResBody.class);
             queryTaskRequestBody.setEfSecurityToken(efSecurityToken);
             queryTaskRequestBody.setCOOKIE(MyCookieJar.getFixCookieValue());
-//            log.info(MyCookieJar.getFixCookieValue());
             List<String> strings = queryTaskRequestBody.get__blocks__().getInqu_status().getRows().get(0);
             strings.set(2, beginTime);
             strings.set(3, endTime);
@@ -107,23 +100,43 @@ public class AutoCheckService implements IAutoCheckService {
         }
 
         if (rows.size() == 0) {
-            log.error("[*" + id + "*]：" + beginTime + "-" + endTime + "无点检");
+            log.error("[*" + user.getName() + "*]：" + beginTime + "-" + endTime + "无点检或已点检");
             return;
         }
 
         // 任务详情查询后处理数据提交
         try {
+            CompletedRequestBody completedRequestBody = new Gson().fromJson(requetBody.getCompletedRequetBodyString(), CompletedRequestBody.class);
+            //TODO:异步处理更新
+            update(rows, completedRequestBody, sysConfig, beginTime, endTime);
+            Response completedResponses = HttpUtil.jsonBodyPost(completedRequestUrl, completedRequestBody, efSecurityToken);
+            completedResponses.close();
+            log.error("[*" + user.getName() + "*]：" + beginTime + "-" + endTime + "点检数：" + rows.size());
+        } catch (Exception e) {
+            log.error(e.getMessage());
+            throw new RuntimeException(e);
+        }
+
+    }
+
+    private void update(List<List<String>> rows, CompletedRequestBody completedRequestBody, SYSConfig sysConfig, String beginTime, String endTime) {
+
+        try {
+
+            List<List<String>> resultRows = completedRequestBody.get__blocks__().getResult().getRows();
+
+            QueryTaskDetailRequetBody queryTaskDetailRequetBody = new Gson().fromJson(requetBody.getQueryTaskDetailRequetBodyString(), QueryTaskDetailRequetBody.class);
+
             for (List<String> row : rows) {
-                QueryTaskDetailRequetBody queryTaskDetailRequetBody = new Gson().fromJson(requetBody.getQueryTaskDetailRequetBodyString(), QueryTaskDetailRequetBody.class);
                 queryTaskDetailRequetBody.setCheckStandardId(row.get(6));
                 queryTaskDetailRequetBody.setCheckPlanInternalCode(row.get(24));
-                Response dateilResponses = HttpUtil.jsonBodyPost(queryTaskDetailRequestUrl, queryTaskDetailRequetBody, "");
-                assert dateilResponses.body() != null;
-                QueryTaskDetailResultBody queryTaskDetailResultBody = new Gson().fromJson(dateilResponses.body().string(), QueryTaskDetailResultBody.class);
+                Response detailResponses = HttpUtil.jsonBodyPost(queryTaskDetailRequestUrl, queryTaskDetailRequetBody, "");
+                assert detailResponses.body() != null;
+                QueryTaskDetailResultBody queryTaskDetailResultBody = new Gson().fromJson(detailResponses.body().string(), QueryTaskDetailResultBody.class);
                 List<List<String>> detailRows = queryTaskDetailResultBody.get__blocks__().getResultXc().getRows();
                 List<String> dataRow = new ArrayList<>(), temp;
                 //13,19,4,3,5,6,7(数值),9（10判定正常）,10,11,8,12,15,16,14,18
-                List<List<String>> detailRowsSpe = detailRows.stream().filter(item -> sysConfig.getOpData().contains(item.get(6))).collect(Collectors.toList());
+                List<List<String>> detailRowsSpe = detailRows.stream().filter(item -> sysConfig.getOpData().contains(item.get(6))).toList();
                 for (List<String> detailRow: detailRowsSpe) {
                     detailRow.set(7, sysConfig.getOpValue());
                     detailRow.set(9, "10");
@@ -153,60 +166,28 @@ public class AutoCheckService implements IAutoCheckService {
                     Response response = HttpUtil.jsonBodyPost(updateTaskDetailRequestUrl, updateTaskDetailRequestBody, "");
                     response.close();
                 }
+
+                complete(resultRows, row);
             }
         } catch (Exception e) {
             log.error(e.getMessage());
             throw new RuntimeException(e);
         }
 
-        try {
-            CompletedRequestBody completedRequestBody = new Gson().fromJson(requetBody.getCompletedRequetBodyString(), CompletedRequestBody.class);
-            List<List<String>> resultRows = completedRequestBody.get__blocks__().getResult().getRows();
-            for (List<String> row : rows) {
-                List<String> resultRow = new ArrayList<>();
-                resultRow.add(row.get(24));
-                resultRow.add(row.get(6));
-                resultRow.add("0");
-                resultRow.add(row.get(8));
-                resultRow.add("1");
-                resultRow.add(row.get(5));
-                resultRow.add(row.get(13));
-                resultRow.add(row.get(2));
-                resultRow.add(row.get(13));
-                resultRows.add(resultRow);
-            }
-
-            Response completedResponses = HttpUtil.jsonBodyPost(completedRequestUrl, completedRequestBody, efSecurityToken);
-            completedResponses.close();
-            log.error("***" + id + "：" + beginTime + "-" + endTime + "点检数：" + rows.size());
-        } catch (Exception e) {
-            log.error(e.getMessage());
-            throw new RuntimeException(e);
-        }
-
     }
 
-    public String getNewCookie(List<String> cookies) {
-        String newCookie = "";
-        for (String val : cookies) {
-            if (val.startsWith("JSESSIONID")) {
-                int index = val.indexOf(";");
-                newCookie = val.substring(0, index + 1);
-                break;
-            }
-        }
-        return newCookie;
+    public void complete(List<List<String>> resultRows, List<String> row) {
+        List<String> resultRow = new ArrayList<>();
+        resultRow.add(row.get(24));
+        resultRow.add(row.get(6));
+        resultRow.add("0");
+        resultRow.add(row.get(8));
+        resultRow.add("1");
+        resultRow.add(row.get(5));
+        resultRow.add(row.get(13));
+        resultRow.add(row.get(2));
+        resultRow.add(row.get(13));
+        resultRows.add(resultRow);
     }
 
-    public String getFixedCookie(List<String> cookies) {
-        String fixedCookie = "";
-        for (String val : cookies) {
-            if (val.startsWith("iplat.sessionId")) {
-                int index = val.indexOf(";");
-                fixedCookie = val.substring(0, index);
-                break;
-            }
-        }
-        return fixedCookie;
-    }
 }
